--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -34,7 +34,6 @@ color: #ffffff;
     position: relative;
     z-index: 1;
     margin-top: -20px;
-	#margin-bottom: -60px;
     
 }
 .left {
@@ -47,20 +46,29 @@ color: #ffffff;
     margin-bottom: 10px;
 }
 
-.menu div {
+.menu_div {
     font-family: Verdana, sans-serif;
-color: #ffffff;
+    color: #ffffff;
+    height: 40px;
+    text-align: center;
+    vertical-align:middle;
+    line-height: 40px;
 }
 
-.menu a {
+.menu_item a {
     text-decoration: none;
 }
 
-.menu {
-list-style-type: none;
-margin-bottom: 20px;
-margin-top: 20px;
-margin-left: -10px;
+#menu {
+    list-style-type: none;
+}
+
+.menu_item {
+    margin-bottom: 20px;
+    margin-top: 20px;
+    margin-left: -30px;
+    margin-right: 10px;
+    
 }
 
 .right {
