Commited logos and profile picture. added information to me page Signed-off-by: Saku Rautiainen <saku.rautiainen@intel.com>

--- a/style/content_style.css
+++ b/style/content_style.css
@@ -17,3 +17,11 @@ ul {
 ul li {
     margin-top: 10px;
 }
+
+#profiili {
+    float: right;
+    margin-right: 10px;
+    margin-top: 10px;
+    border: 2px solid #64A8D1;
+    border-radius: 10px;
+}
