--- a/style/content_style.css
+++ b/style/content_style.css
@@ -5,7 +5,9 @@ h4 {
 }
 
 p {
-    font-family: Garamond, serif;
+    color: #333333;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+    font-size: 15px;
     margin-left: 5px;
     margin-top: 0px;
 }
