--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -1,6 +1,6 @@
-body {
+html {
     background-color: #D0D0D0;
-	max-width: 800px
+	max-width: 800px;
 }
 
 div {
@@ -16,7 +16,7 @@ font-weight: bold;
     margin-left: 10px;
     padding-top: 30px;
     font-family: Verdana, sans-serif;
-color: #ffffff;
+    color: #ffffff;
 }
 
 #email {
@@ -24,7 +24,7 @@ color: #ffffff;
     margin-right: 10px;
     padding-top: 30px;
     font-family: Verdana, sans-serif;
-color: #ffffff;
+    color: #ffffff;
 }
 
 #header {
